js实现商品会员价与促销显示（列表）

--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/products.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/products.html
@@ -32,7 +32,7 @@
 			{% if products %}
 			<ul data-role="listview" data-theme="x" data-icon="false">
 				{% for product in products %}
-				<li>
+				<li class="{% if product.is_member_product %}xa-member-product{% endif %}">
 					<a href='./?woid={{request.webapp_owner_id}}&module=mall&model=product&rid={{product.id}}'>
                         <div class="img"><img src="{{ product.thumbnails_url }}"></div>
 						<h3>{{ product.name }}</h3>
@@ -54,6 +54,7 @@
 
 
 $(document).ready(function() {
+
     var imgWidth = window.document.body.clientWidth
     var imgHeight = imgWidth - 36
     $('.xui-hlist .img img').css({
