群发优惠券弹窗

--- a/weapp/static_v2/css/member.css
+++ b/weapp/static_v2/css/member.css
@@ -34,7 +34,7 @@
 .xui-memberQrcodePage .xui-i-content label{
 	width: 125px;
 	text-align: right;
-	display: inline-block;	
+	display: inline-block;
 }
 .xui-memberQrcodePage .xui-prize select{
 	background: none repeat scroll 0 0 #f2f2f2;
@@ -63,10 +63,10 @@
 	margin-top: 20px;
 }
 .xui-members-page .table tbody tr{
-    height:100px; 
+    height:100px;
 }
 .xui-members-page .table tbody tr:last-child{
-    height:60px; 
+    height:60px;
 }
 .xui-members-page .table tr:nth-child(even) {background:#EFF5FF}
 .xui-members-page .table tr:nth-child(odd) {background: #FFFFFF}
@@ -118,7 +118,7 @@
    width: 100px;
    margin: auto;
    text-align: center;
-} 
+}
 
 .xui-members-page .xui-p-title{
 	margin-left: 20px;
@@ -134,7 +134,7 @@
 	line-height: 30px;
 }
 .xui-members-page .errorHint{
-	
+
 	width: 80px;
 	margin-left: 95px;
 	position: relative;
@@ -220,7 +220,7 @@
 }
 .xui-memberListPage .xui-w218,
 .xui-memberListPage .xui-col .xui-i-item select{
-	
+
 }
 .xui-memberListPage .xui-w100{
 	width:66px!important;
@@ -231,7 +231,7 @@
 .xui-memberListPage .xui-memberHeader a,
 .xui-memberListPage .xui-memberHeader a > img{
 	width:41px;
-	height: 41px;	
+	height: 41px;
 }
 .xui-memberListPage .xb-pagination-component{
 	position: absolute;
@@ -243,8 +243,8 @@
 }
 .xui-updateGradeOrTagBox .btn-primary{
 	background: #207cbe;
-	color:#fff;		
-	margin-right: 15px;			
+	color:#fff;
+	margin-right: 15px;
 }
 .xui-updateGradeOrTagBox input[type="radio"],.xui-updateGradeOrTagBox input[type="checkbox"],{
 	margin-top:2px;
@@ -283,7 +283,7 @@
 	border-top:1px solid #c5c5c5;
 }
 .xui-memberListPage .xui-operation ul li a{
-	padding: 6px 12px;	
+	padding: 6px 12px;
 }
 .xui-memberListPage .xui-operation .caret{
 	margin-top: -2px;
@@ -404,7 +404,7 @@
   font-weight: bold;
 }
 .xui-page-memberDetail .xui-unknow{
-    position: relative;	
+    position: relative;
     left:-30px;
     background-color: #ccc;
     border-radius: 9px;
@@ -448,16 +448,16 @@
 
 
 .xui-page-memberDetail .xui-img-wrap
-{ 
+{
 	margin-top: 38px;
-	margin-left:30px; 
+	margin-left:30px;
 	width: 132px;
 	height: 46px;
-	
+
 }
 
 .xui-page-memberDetail .xui-img
-{ 
+{
 	width: 41px !important;
 	height: 41px !important;
 	margin-left: 32px;
@@ -585,7 +585,7 @@
 	margin-right: 10px;
 }
  .xui-memberOrderPayDialog  .logtable th,.xui-memberOrderPayDialog  .logtable td{
-    width:33.3333%; 
+    width:33.3333%;
 }
 .xui-page-memberDetail  .xui-color-blue{
 	color:#1183CA;
@@ -614,4 +614,13 @@
 }
 .xui-page-memberDetail .form-control{
 	width: 130px;
+}
+
+.xui-chooseCouponCount {
+    line-height: 20px;
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    border: 1px solid black;
+    vertical-align: center;
 }
