build_test 测试build到测试环境是否成功

--- a/weapp/member/templates/member/editor/member_grades.html
+++ b/weapp/member/templates/member/editor/member_grades.html
@@ -18,7 +18,7 @@
 <div class="xui-members-page">
 	<div class="relative">
 		<ul class="breadcrumb">
-			<li>您当前所在位置</li>
+			<li>您当前所在位置 build_test</li>
 			<li>
 				<a href="/member/members/get/">会员管理</a>
 			</li>
