修改一些不太贴切的命名

--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/products_original.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/products_original.html
@@ -2,7 +2,7 @@
 {% load common_tag %}
 
 {% block content-panel %}
-<div id='product_list_contain' data-user-is-member="{{request.member.grade_id}}" data-role="page" data-theme="x" data-title="{{ page_title }}" class="xui-page xui-productsList-page">
+<div id='product_list_contain' data-member-grade-id="{{request.member.grade_id}}" data-role="page" data-theme="x" data-title="{{ page_title }}" class="xui-page xui-productsList-page">
 
     <a href="./?woid={{request.webapp_owner_id}}&module=mall&model=shopping_cart&action=show" class="xui-shoppingCartBtn xt-shoppingCartBtn" data-role="button">
         <span class="xui-inner-count xa-shoppingCartCount hidden"></span>
@@ -49,7 +49,7 @@
 <script type="text/javascript">
 $(document).ready(function() {
     var fmt = $('body').data('value');
-    var user_member_grade_id = $("#product_list_contain").data('user-is-member');
+    var user_member_grade_id = $("#product_list_contain").data('member-grade-id');
     var user_has_promotion = function(user_member_grade_id, promotion_member_grade_id){
         if(promotion_member_grade_id == '0'){return true;}
         if(promotion_member_grade_id == user_member_grade_id){
