--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
@@ -12,7 +12,7 @@ a.xui-btn:link,a.xui-btn:hover,.xui-btn:visited{color:#fff!important;}
 {% endblock %}
 
 {% block content-panel %}
-<div id="product-detail" data-user-is-member="{{request.member.grade_id}}" class="xui-productDetailPage xui-page">
+<div id="product-detail" data-member-grade-id="{{request.member.grade_id}}" class="xui-productDetailPage xui-page">
     <div data-role="content" data-theme="x" class="xui-content xa-content">
         <div
             data-ui-role="swipeimage"
@@ -393,7 +393,7 @@ var is_member_product = '{{product.is_member_product}}'
 var promotion = W.loadJSON('promotion');
 
 $(document).ready(function() {
-    var user_member_grade_id = $("#product-detail").data('user-is-member');
+    var user_member_grade_id = $("#product-detail").data('member-grade-id');
     var is_member_product = $("#product").data('is-member-product');
     var user_has_promotion = function(user_member_grade_id, promotion_member_grade_id){
         if(promotion_member_grade_id == '0'){return true;}
