--- a/weapp/member/templates/member/editor/members.html
+++ b/weapp/member/templates/member/editor/members.html
@@ -383,6 +383,7 @@ $(document).ready(function() {
 						friendCount: friend_count,
 						fansCount: fans_count,
 						isReload:true,
+						onlyFans:true
 					});
 			});
 
